--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "url": "profold-be-api-1"
   },
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "set USE_MOCK_MODEL=1 && mocha --recursive --require dotenv/config",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
@@ -19,21 +21,21 @@
   "license": "ISC",
   "dependencies": {
     "@app-core/errors": "file:core/errors",
-    "@app-core/server": "file:core/express",
     "@app-core/handlebars": "file:core/handlebars",
     "@app-core/http-request": "file:core/http-request",
     "@app-core/jwt": "file:core/jwt",
     "@app-core/knex": "file:core/knex",
     "@app-core/logger": "file:core/logger",
+    "@app-core/messages": "file:messages",
+    "@app-core/middlewares": "file:middlewares",
     "@app-core/mock-factory": "file:core/mock-factory",
     "@app-core/mongoose": "file:core/mongoose",
     "@app-core/notifier": "file:core/notifier",
     "@app-core/randomness": "file:core/randomness",
     "@app-core/repository-factory": "file:core/repository-factory",
     "@app-core/security": "file:core/security",
+    "@app-core/server": "file:core/express",
     "@app-core/validator": "file:core/validator",
-    "@app-core/messages": "file:messages",
-    "@app-core/middlewares": "file:middlewares",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -58,17 +60,23 @@
     "@app-core/mock-server": "file:core/mock-server",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@types/node": "^24.2.0",
     "chai": "^4.3.7",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-mocha": "^10.4.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "list_end_points": "^2.0.6",
     "mocha": "^10.5.1",
     "node-mocks-http": "^1.14.1",
-    "prettier": "^3.3.2"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
